--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -12,15 +12,20 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
+        android:layout_marginEnd="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/contact_item_tv_name"
         android:src="@drawable/profile"/>
 
     <TextView
         android:id="@+id/contact_item_tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_weight="2"
+        android:gravity="center"
+        android:layout_margin="2dp"
         android:text="@string/item_contact_name"
         app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
         app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
@@ -29,8 +34,11 @@
 
     <TextView
         android:id="@+id/contact_item_tv_age"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_weight="1"
+        android:gravity="center"
+        android:layout_margin="2dp"
         android:text="@string/item_contact_age"
         app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
         app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
@@ -39,8 +47,11 @@
 
     <TextView
         android:id="@+id/contact_item_tv_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_weight="4"
+        android:layout_margin="2dp"
+        android:gravity="center"
         android:text="@string/item_contact_phone"
         app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
         app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
@@ -49,8 +60,11 @@
 
     <TextView
         android:id="@+id/contact_item_tv_country"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_weight="2"
+        android:gravity="center"
+        android:layout_margin="2dp"
         android:text="@string/item_contact_country"
         app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
         app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
