--- a/app/src/main/res/layout/activity_image_info.xml
+++ b/app/src/main/res/layout/activity_image_info.xml
@@ -9,24 +9,23 @@
     <ImageView
         android:id="@+id/info_iv_image"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:src="@drawable/ic_launcher_background"
-        android:adjustViewBounds="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@id/info_tv_author"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/info_tv_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/info_author"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/info_tv_size"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -38,7 +37,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/info_size"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -46,13 +45,12 @@
         android:id="@+id/info_btn_rotation"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_loop_24px"
-        android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@android:color/transparent"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        android:src="@drawable/ic_loop_24px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/info_tv_author"
+        app:layout_constraintBottom_toBottomOf="@id/info_tv_size"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
