--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,74 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/contact_item_iv_profile"
-        android:layout_width="70dp"
+    <data>
+        <variable
+            name="contact"
+            type="com.hyunjung.toyprojectapp.contact.Contact" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerInside"
-        android:adjustViewBounds="true"
-        android:layout_marginEnd="2dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/contact_item_tv_name"
-        android:src="@drawable/profile"/>
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/contact_item_tv_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="2"
-        android:gravity="center"
-        android:layout_margin="2dp"
-        android:text="@string/item_contact_name"
-        app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
-        app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
-        app:layout_constraintStart_toEndOf="@id/contact_item_iv_profile"
-        app:layout_constraintEnd_toStartOf="@id/contact_item_tv_age"/>
+        <ImageView
+            android:id="@+id/contact_item_iv_profile"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:layout_marginEnd="2dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/contact_item_tv_name"
+            android:src="@drawable/profile"/>
 
-    <TextView
-        android:id="@+id/contact_item_tv_age"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="1"
-        android:gravity="center"
-        android:layout_margin="2dp"
-        android:text="@string/item_contact_age"
-        app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
-        app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
-        app:layout_constraintEnd_toStartOf="@id/contact_item_tv_phone"
-        app:layout_constraintStart_toEndOf="@id/contact_item_tv_name"/>
+        <TextView
+            android:id="@+id/contact_item_tv_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_weight="2"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:text="@{contact.name}"
+            app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
+            app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
+            app:layout_constraintStart_toEndOf="@id/contact_item_iv_profile"
+            app:layout_constraintEnd_toStartOf="@id/contact_item_tv_age"
+            tools:text="@string/item_contact_name"/>
 
-    <TextView
-        android:id="@+id/contact_item_tv_phone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="4"
-        android:layout_margin="2dp"
-        android:gravity="center"
-        android:text="@string/item_contact_phone"
-        app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
-        app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
-        app:layout_constraintEnd_toStartOf="@id/contact_item_tv_country"
-        app:layout_constraintStart_toEndOf="@id/contact_item_tv_age"/>
+        <TextView
+            android:id="@+id/contact_item_tv_age"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_weight="1"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:text="@{@string/item_contact_age(contact.age)}"
+            app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
+            app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
+            app:layout_constraintEnd_toStartOf="@id/contact_item_tv_phone"
+            app:layout_constraintStart_toEndOf="@id/contact_item_tv_name"
+            tools:text="00살"/>
 
-    <TextView
-        android:id="@+id/contact_item_tv_country"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintHorizontal_weight="2"
-        android:gravity="center"
-        android:layout_margin="2dp"
-        android:text="@string/item_contact_country"
-        app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
-        app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
-        app:layout_constraintStart_toEndOf="@id/contact_item_tv_phone"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/contact_item_tv_phone"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_weight="4"
+            android:layout_margin="2dp"
+            android:gravity="center"
+            android:text="@{contact.phoneNum}"
+            app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
+            app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
+            app:layout_constraintEnd_toStartOf="@id/contact_item_tv_country"
+            app:layout_constraintStart_toEndOf="@id/contact_item_tv_age"
+            tools:text="@string/item_contact_phone"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/contact_item_tv_country"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_weight="2"
+            android:gravity="center"
+            android:layout_margin="2dp"
+            android:text="@{contact.country}"
+            app:layout_constraintTop_toTopOf="@id/contact_item_iv_profile"
+            app:layout_constraintBottom_toBottomOf="@id/contact_item_iv_profile"
+            app:layout_constraintStart_toEndOf="@id/contact_item_tv_phone"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="@string/item_contact_country"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
